samples/_failures_safe/1761177758_018711_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_49b7bc6e.c: In function ‘main’:
./samples/SAFE/__tmp_49b7bc6e.c:155:12: error: missing terminating " character
  155 |     printf("Graph
      |            ^~~~~~
./samples/SAFE/__tmp_49b7bc6e.c:155:5: error: expected expression at end of input
  155 |     printf("Graph
      |     ^~~~~~
./samples/SAFE/__tmp_49b7bc6e.c:155:5: error: expected declaration or statement at end of input
